# Agentic_Resume_Extractor

./: .gitignore
ph_resume_ext/: Project Summary.docx  README.md  pyproject.toml
ph_resume_ext/src/ph_resume_ext/: main.py  type.py
ph_resume_ext/src/ph_resume_ext/crews/resume_crew_pr/: __init__.py  resume_crew.py
ph_resume_ext/src/ph_resume_ext/crews/resume_crew_pr/config/: agents.yaml  tasks.yaml
ph_resume_ext/src/ph_resume_ext/resume/Golden_Records/: elegant-ms-word-resume-template.json  entry-level-data-scientist-resume-example.json  official-ms-word-resume-template.json  senior-data-scientist-resume-example.json  standout-ms-word-resume-template.json
ph_resume_ext/src/ph_resume_ext/resume/processed/: elegant-ms-word-resume-template.json  entry-level-data-scientist-resume-example.json  evaluation_results.csv  official-ms-word-resume-template.json  senior-data-scientist-resume-example.json  standout-ms-word-resume-template.json
ph_resume_ext/src/ph_resume_ext/resume/templates/: elegant-ms-word-resume-template.docx  standout-ms-word-resume-template.docx
ph_resume_ext/src/ph_resume_ext/tools/: Text_Cleaner.py  doc_extractor_tool.py  pdf_reader_tool.py
ph_resume_ext/tests/: Evaluation_Script.py
