[project]
name = "ph_resume_ext"
version = "0.1.0"
description = "ph_resume_ext using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "ph_resume_ext.main:kickoff"
run_crew = "ph_resume_ext.main:kickoff"
plot = "ph_resume_ext.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
